--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/react": "^3.5.0",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
     "@nextui-org/react": "latest",
+    "@sanity/astro": "^3.1.4",
+    "@sanity/client": "^6.21.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/visual-editing": "^2.1.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
+    "astro-sanity-picture": "^0.2.0",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanity": "^3.53.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
