--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
     "@nextui-org/react": "latest",
+    "@portabletext/to-html": "^2.0.13",
     "@sanity/astro": "^3.1.4",
+    "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.21.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/visual-editing": "^2.1.8",
@@ -24,6 +26,7 @@
     "astro": "^4.10.2",
     "astro-sanity-picture": "^0.2.0",
     "framer-motion": "^11.2.10",
+    "next-sanity": "^9.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.53.0",
