--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/visual-editing": "^2.1.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.10.2",
     "astro-sanity-picture": "^0.2.0",
     "framer-motion": "^11.2.10",
