--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/client": "^6.21.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/visual-editing": "^2.1.8",
+    "@sanity/vision": "^3.59.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.3.1",
